--- a/package.json
+++ b/package.json
@@ -21,9 +21,15 @@
   },
   "scripts": {
     "dev": "webpack-dev-server --progress --inline --hot",
+    "lint": "eslint src",
     "build": "webpack -p"
   },
   "devDependencies": {
-    "babel-preset-react-hmre": "^1.1.1"
+    "babel-preset-react-hmre": "^1.1.1",
+    "eslint": "^4.14.0",
+    "eslint-config-airbnb": "^16.1.0",
+    "eslint-plugin-import": "^2.8.0",
+    "eslint-plugin-jsx-a11y": "^6.0.3",
+    "eslint-plugin-react": "^7.5.1"
   }
 }
