--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,6 +1,7 @@
 {
     "extends": "airbnb",
     "rules": {
+        "comma-dangle": ["error", "never"],
         "indent": ["error", 4],
         "linebreak-style": ["off"]
     }
