--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -8,7 +8,14 @@
     "rules": {
         "comma-dangle": ["error", "never"],
         "indent": ["error", 4],
-        "react/jsx-filename-extension": ["error", { "extensions": [".js", ".jsx"] }],
+        "jsx-a11y/anchor-is-valid": [
+          "error",
+          { "components": ["Link"], "specialLink": ["to"] }
+        ],
+        "react/jsx-filename-extension": [
+          "error",
+          { "extensions": [".js", ".jsx"] }
+        ],
         "react/jsx-indent": ["error", 4],
         "linebreak-style": ["off"],
         "react/prefer-stateless-function": ["off"],
