Code clean-up and eslint config changes

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -10,6 +10,17 @@
         "indent": ["error", 4],
         "react/jsx-filename-extension": ["error", { "extensions": [".js", ".jsx"] }],
         "react/jsx-indent": ["error", 4],
-        "linebreak-style": ["off"]
+        "linebreak-style": ["off"],
+        "react/prefer-stateless-function": ["off"],
+        "jsx-a11y/anchor-is-valid": ["off"],
+        "jsx-a11y/interactive-supports-focus": ["off"],
+        "jsx-a11y/click-events-have-key-events": ["off"],
+        "no-restricted-syntax": ["off"],
+        "max-len": ["error", 180],
+        "no-return-assign": ["off"],
+        "react/jsx-no-bind": ["off"],
+        "react/forbid-prop-types": ["off"],
+        "react/no-typos": ["off"],
+        "no-console": ["off"]
     }
 }
